# SnowMaster-Unofficial

./: CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
scripts/: eval.py  smoke_test.py
src/snowmaster_unofficial/: dataset.py
